Fix layout featured section mobile n tablet

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -97,16 +97,7 @@
     #featured-project{
         .featured-project-info{
             padding: 0;
-            margin: 3em 0;
-            .featured-project-title{
-                text-align: left;
-            }
-            h2{
-                text-align: left;
-            }
-            .youtube-info{
-                text-align: left;
-            }
+            margin: 1em 0;
         }
     }
 
