--- a/scss/_tablet.scss
+++ b/scss/_tablet.scss
@@ -95,24 +95,34 @@
     // Featured project (youtube)
     #featured-project{
         margin-top: 1em;
-        margin-bottom: 3em;
+        padding: 4em 0;
         .video-wrapper{
             width: 100%;
-        }
-        .featured-project-info{
-            padding: 3em;
-            width: 100%;
+            margin-bottom: 1em;
             .featured-project-title{
                 text-align: center;
             }
             h2{
-                font-size: 2em;
+                font-size: 1.8em;
                 text-align: center;
             }
+            iframe{
+                width: 100%;
+                height: 300px;
+            }
+        }
+        .featured-project-info{
+            width: 100%;
             .youtube-info{
                 text-align: center;
                 font-size: 1em;
                 line-height: 1.6em;
+                .see-channel{
+                    margin: 0 auto;
+                }
+                .tech-youtube-use{
+                    font-size: .9em;
+                }
             }
         }
     }
