--- a/scss/style.scss
+++ b/scss/style.scss
@@ -472,6 +472,8 @@ nav{
 		}
 		iframe{
 			border: none;
+			width: 80%;
+			height: 450px;
 		}
 	}
 	.featured-project-info{
